@@ -174,18 +174,18 @@ exit;
 # D A T A   B L O C K  -----------------------------------------------------
 # nr ID              ra           dec        r_mag b_mag  q field gsc    d'     pa
 __DATA__
-   1 U1500_01193693  01 10 08.76 +60 05 10.2  16.2  18.8   0 00080  -   0.770 317.921
-   2 U1500_01194083  01 10 10.31 +60 04 42.4  18.2  19.6   0 00080  -   0.341 288.524
-   3 U1500_01194433  01 10 11.62 +60 04 49.8  17.5  18.8   0 00080  -   0.281 325.435
-   4 U1500_01194688  01 10 12.60 +60 04 14.3  13.4  14.6   0 00080  -   0.362 185.885
-   5 U1500_01194713  01 10 12.67 +60 04 26.8  17.6  18.2   0 00080  -   0.154 190.684
-   6 U1500_01194715  01 10 12.68 +60 04 43.0  17.8  18.9   0 00080  -   0.122 346.850
-   7 U1500_01194794  01 10 12.95 +60 04 36.2  16.1  16.4   0 00080  -   0.009  50.761
-   8 U1500_01195060  01 10 13.89 +60 05 28.7  18.1  19.1   0 00080  -   0.889   7.975
-   9 U1500_01195140  01 10 14.23 +60 05 25.5  16.5  17.9   0 00080  -   0.843  11.328
-  10 U1500_01195144  01 10 14.26 +60 04 38.1  18.4  19.5   0 00080  -   0.173  77.596
-  11 U1500_01195301  01 10 14.83 +60 04 19.1  14.2  16.8   0 00080  -   0.370 139.435
-  12 U1500_01195521  01 10 15.71 +60 04 43.8  18.7  19.6   0 00080  -   0.374  69.469
-  13 U1500_01195912  01 10 17.30 +60 05 22.1  14.1  16.9   0 00080  -   0.944  35.466
-  14 U1500_01196088  01 10 18.00 +60 04 37.1  15.1  17.7   0 00080  -   0.636  88.143
-  15 U1500_01196555  01 10 20.00 +60 04 12.3  18.2  19.1   0 00080  -   0.969 113.908
+   1 U1500_01193693  01 10 08.76 60 05 10.2  16.2  18.8   0 00080  -   0.770 317.921
+   2 U1500_01194083  01 10 10.31 60 04 42.4  18.2  19.6   0 00080  -   0.341 288.524
+   3 U1500_01194433  01 10 11.62 60 04 49.8  17.5  18.8   0 00080  -   0.281 325.435
+   4 U1500_01194688  01 10 12.60 60 04 14.3  13.4  14.6   0 00080  -   0.362 185.885
+   5 U1500_01194713  01 10 12.67 60 04 26.8  17.6  18.2   0 00080  -   0.154 190.684
+   6 U1500_01194715  01 10 12.68 60 04 43.0  17.8  18.9   0 00080  -   0.122 346.850
+   7 U1500_01194794  01 10 12.95 60 04 36.2  16.1  16.4   0 00080  -   0.009  50.761
+   8 U1500_01195060  01 10 13.89 60 05 28.7  18.1  19.1   0 00080  -   0.889   7.975
+   9 U1500_01195140  01 10 14.23 60 05 25.5  16.5  17.9   0 00080  -   0.843  11.328
+  10 U1500_01195144  01 10 14.26 60 04 38.1  18.4  19.5   0 00080  -   0.173  77.596
+  11 U1500_01195301  01 10 14.83 60 04 19.1  14.2  16.8   0 00080  -   0.370 139.435
+  12 U1500_01195521  01 10 15.71 60 04 43.8  18.7  19.6   0 00080  -   0.374  69.469
+  13 U1500_01195912  01 10 17.30 60 05 22.1  14.1  16.9   0 00080  -   0.944  35.466
+  14 U1500_01196088  01 10 18.00 60 04 37.1  15.1  17.7   0 00080  -   0.636  88.143
+  15 U1500_01196555  01 10 20.00 60 04 12.3  18.2  19.1   0 00080  -   0.969 113.908
